# WebLFP

./: .gitattributes  .gitignore  README.md  README.zh-CN.md  pyproject.toml  run.bat  run.sh
docs/: USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ChannelMultiSelect.tsx  Guide.tsx  History.tsx  Settings.tsx  echarts-gl.d.ts  styles.css
models/clip-lfp-best/: model.json  model.pt
models/spike-type-decoder/: model.json  model.pt
scripts/: install_pytorch.py  watch_pytorch_install.py
src/weblfp/: __init__.py  api.py  dialogs.py  downstream_schema.py  inference.py  inference_jobs.py  model_service.py  preprocessing.py  profile.py  recording.py  run_history.py  segment_cache.py  settings.py  type_decoder.py  updates.py
src/weblfp/models/: __init__.py  clip_lfp.py  lfp_encoder.py  spike_count.py
tests/: test_api.py  test_dialogs.py  test_model_integration.py  test_preprocessing.py  test_recording.py  test_run_history.py  test_segment_cache.py  test_settings.py  test_type_decoder.py  test_updates.py
