[project]
name = "weblfp"
version = "0.1.0"
description = "Local-first LFP representation and downstream inference web application"
license = "AGPL-3.0-only"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.116,<1",
    "h5py>=3.14,<4",
    "neo>=0.14,<1",
    "numpy>=2.1,<3",
    "pydantic-settings>=2.10,<3",
    "pynwb>=3.1,<4",
    "pyyaml>=6.0.2,<7",
    "scipy>=1.15,<2",
    "spikeinterface>=0.103,<1",
    "umap-learn>=0.5.12,<0.6",
    "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
weblfp = "weblfp.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/weblfp"]
